fix show page menu spacing

--- a/app/assets/stylesheets/store_show/store_show_menu.scss
+++ b/app/assets/stylesheets/store_show/store_show_menu.scss
@@ -14,7 +14,7 @@
 
 .menu-box {
     width: 100%;
-    height: 400px;
+    height: 100%;
 }
 
 .menu-box h2 {
